<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filmEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilmEditActivity">
    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FilmEditActivity">

        <TextView
            android:id="@+id/editingFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editingFilm"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            ></TextView>
        <Button
            android:id="@+id/saveButton"
            android:text="@string/save"
            android:layout_width="150dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/editingFilm"
            app:layout_constraintStart_toStartOf="@id/editingFilm"
            app:layout_constraintEnd_toEndOf="@id/editingFilm"
            ></Button>

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:layout_width="150dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="@id/saveButton"
            app:layout_constraintEnd_toEndOf="@id/saveButton"
            ></Button>
        <TextView
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Filmoteca.Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="@id/cancel_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
